fix Spells alignment

--- a/src/Spells.css
+++ b/src/Spells.css
@@ -1,3 +1,9 @@
+.spells-container-top {
+    display: flex;
+    align-items: center;
+    margin-top: 16px;
+}
+
 #spell-buttons {
     flex: 1;
     display: grid;
@@ -5,4 +11,9 @@
     gap: 10px;
     justify-content: center;
     margin-top: 16px;
+}
+
+.spells-container-back-button {
+    padding:  .6rem 1rem;
+    margin-left: auto;
 }
